--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@ body {
 }
 
 .tab {
+  display: block;
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  -webkit-overflow-scrolling: touch;
   width: 100px;
   table-layout: auto;
   color: white;
